<resources>
    <string name="app_name">Shoe Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_icon">app icon</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="btn_login">Login</string>
    <string name="register_now">Register Now</string>
    <string name="next">next</string>
    <string name="welcome_to_shoe_store">Welcome to Shoe Store</string>
    <string name="welcome_note">Please click the next button to continue the onboarding process so that you are familiar with the app use and can utilize the most of it.</string>
    <string name="store_instructions">Store Instructions</string>
    <string name="instruction_note">1. Please click the next button to see the Shoes List. \n\n2. If there is nothing in the list then you can add new Shoe items with the help + button provided at the bottom-right corner of the screen.</string>
    <string name="add_shoe_fab">Add Shoe FAB</string>
    <string name="btn_next">Next</string>
    <string name="welcome">Welcome</string>
    <string name="instructions">Instructions</string>
    <string name="app_home">Home</string>
    <string name="shoes_details">Details</string>
    <string name="shoe_name">Name</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="shoe_image">Shoe Image</string>
    <string name="logout">Logout</string>
    <string name="please_fill_all_details">Please fill all the details.</string>
</resources>
