<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.viewmodel.ShoeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.onboarding.InstructionOnboardingFragment">

        <ImageView
            android:id="@+id/ivAppIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="70dp"
            android:contentDescription="@string/app_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_shoe_shop"
            app:tint="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/tvInstruction"
            style="@style/OnboardingTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/store_instructions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivAppIcon" />

        <TextView
            android:id="@+id/tvInstructionNote"
            style="@style/OnboardingNoteStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/instruction_note"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvInstruction"
            tools:targetApi="o" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNext"
            style="@style/NextButtonStyle"
            android:contentDescription="@string/next"
            android:drawableEnd="@drawable/ic_arrow_forward"
            android:onClick="@{() -> shoeViewModel.onOpenShoesList()}"
            android:text="@string/btn_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>