<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_screens.xml"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.screens.login.LoginFragment"
        android:label="@string/btn_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/actionWelcomeOnboarding"
            app:destination="@id/welcomeOnboardingFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/actionLoginShoesListFragment"
            app:destination="@id/shoesListFragment" />
    </fragment>
    <fragment
        android:id="@+id/welcomeOnboardingFragment"
        android:name="com.udacity.shoestore.screens.onboarding.WelcomeOnboardingFragment"
        android:label="@string/welcome"
        tools:layout="@layout/fragment_welcome_onboarding">
        <action
            android:id="@+id/actionInstructionOnboarding"
            app:destination="@id/instructionOnboardingFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/instructionOnboardingFragment"
        android:name="com.udacity.shoestore.screens.onboarding.InstructionOnboardingFragment"
        android:label="@string/instructions"
        tools:layout="@layout/fragment_instruction_onboarding">
        <action
            android:id="@+id/actionShoesListFragment"
            app:destination="@id/shoesListFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/shoesListFragment"
        android:name="com.udacity.shoestore.screens.shoeList.ShoesListFragment"
        android:label="@string/app_home"
        tools:layout="@layout/fragment_shoes_list">
        <action
            android:id="@+id/actionShoeDetailsFragment"
            app:destination="@id/shoeDetailsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@+id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailsFragment"
        android:name="com.udacity.shoestore.screens.shoeDetails.ShoeDetailsFragment"
        android:label="@string/shoes_details"
        tools:layout="@layout/fragment_shoe_details">
        <action
            android:id="@+id/actionDetailsToListFragment"
            app:destination="@id/shoesListFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@+id/shoesListFragment" />
    </fragment>
</navigation>