<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.viewmodel.ShoeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        tools:context=".screens.login.LoginFragment">

        <ImageView
            android:id="@+id/ivAppIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="70dp"
            android:contentDescription="@string/app_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_book_store"
            app:tint="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/tvAppName"
            style="@style/OnboardingTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivAppIcon" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmailAddress"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_small"
            android:hint="@string/email_address"
            android:textColorHint="@color/colorPrimary"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/tvAppName"
            app:layout_constraintStart_toStartOf="@+id/tvAppName"
            app:layout_constraintTop_toBottomOf="@+id/tvAppName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailAddress"
                style="@style/CustomEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:text="@={shoeViewModel.emailAddress}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_small"
            android:hint="@string/password"
            android:textColorHint="@color/colorPrimary"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/tvAppName"
            app:layout_constraintStart_toStartOf="@+id/tvAppName"
            app:layout_constraintTop_toBottomOf="@+id/tilEmailAddress">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                style="@style/CustomEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:text="@={shoeViewModel.password}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:background="@drawable/border_round"
            android:fontFamily="@font/nunito"
            android:onClick="@{() -> shoeViewModel.onRegisterOrLogin()}"
            android:text="@string/btn_login"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_semi_large"
            app:layout_constraintBottom_toTopOf="@+id/tvRegisterNow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvRegisterNow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large"
            android:fontFamily="@font/nunito"
            android:onClick="@{() -> shoeViewModel.onRegisterOrLogin()}"
            android:text="@string/register_now"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>